--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -10,7 +10,7 @@ databaseChangeLog:
   - changeSet:
       id: create_table_token_blacklist
       author: mosfik
-      comment: "This changeset creates Token Black List Table"
+      comment: "This changeset creates Revoked Token Table"
       changes:
         - sqlFile:
-            path: db/changelog/data/create_table_token_blacklist.sql
+            path: db/changelog/data/create_table_revoked_token.sql
