--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://dpg-cv85jg1c1ekc73a7jhjg-a.oregon-postgres.render.com/ingrecipe_db
-    username: mosfik
-    password: rCjjD6X1EIrf56tIZxaMTawLPGR2IAEU
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
     hikari:
       maximum-pool-size: 10
       minimum-idle: 2
@@ -15,7 +15,6 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 jwt:
-  secret: iNgReCiPe
+  secret: ${JWT_SECRET}
