--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: ingrecipe-backend
 
   profiles:
-    active: mosfik  # Loads 'application-mosfik.yml' automatically
+    active: ${SPRING_PROFILES_ACTIVE:local}
 
   main:
     allow-bean-definition-overriding: true
