feat: added fully functional recipe module

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,7 +14,10 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 jwt:
   secret: iNgReCiPe
